Issue #359: Added and removed gapminder files and imports to work with InfoMapper

--- a/infomapper/src/app/map-components/dialog-content/dialog-gapminder/css/style.css
+++ b/infomapper/src/app/map-components/dialog-content/dialog-gapminder/css/style.css
@@ -1,9 +1,3 @@
-/*------------------------------GENERAL STYLING FOR WHOLE PAGE-----------------------------*/
-body {
-  font-size:12px !important;
-  min-width: 1025px;
-}
-
 /*---------------------------------STYLE FOR TAB ELEMENTS-----------------------------------*/
 /* adds a scroll option for data overflowing from data tab */
 div .scroll {
@@ -49,10 +43,16 @@ div.tab button.active {
 
 /* Style the tab content */
 .tabcontent {
-    min-width: 818px;
+    /* min-width: 818px;
     min-height:600px;
     max-height: 85vh;
-    height:55vw; /* height = 42% of width of the viewport */
+    height:55vw;  */
+    /* height = 42% of width of the viewport */
+    width: 818px;
+    min-width: 818px;
+    height: 813px;
+    min-height: 813px;
+    max-height: 813px;
     display: none;
     padding: 6px 12px;
     border-bottom-right-radius: 10px;
@@ -87,7 +87,6 @@ div.tab button.active {
 /* style main row (row 2) */
 #mainrow{
   padding-right:5px;
-  height: 100%;
 }
 
 /* remove margin-left from chart div which contains the acutal visualization*/
@@ -151,10 +150,6 @@ hovered over in which it will pop up */
   fill: none;
 }
 
-.x.axis {
-  height: 500px;
-}
-
 /* style x and y axis */
 .ys.x.axis .domain{
   stroke: #808B96;
@@ -169,33 +164,7 @@ hovered over in which it will pop up */
   stroke-dasharray: 5,5;
 }
 
-/* style for year slider below chart */
-.track,
-.track-inset,
-.track-overlay {
-  stroke-linecap: round;
-}
-.track {
-  stroke: #000;
-  stroke-opacity: 0.3;
-  stroke-width: 4px;
-}
-.track-inset {
-  stroke: #ddd;
-  stroke-width: 2px;
-}
-.track-overlay {
-  pointer-events: stroke;
-  stroke-width: 50px;
-  stroke: transparent;
-  cursor: crosshair;
-}
-.handle {
-  fill: #fff;
-  stroke: #000;
-  stroke-opacity: 0.5;
-  stroke-width: 1.25px;
-}
+/* style for year slider below chart given directly within D3 code  */
 
 /* style buttons with font size 12px */
 .button{
@@ -223,10 +192,6 @@ hovered over in which it will pop up */
 /* style dropedown menu */
 #providerNames{
   font-size:12px;
-}
-
-#table {
-  height: 100%;
 }
 
 #tablerows{
@@ -310,3 +275,14 @@ div.tooltip {
     border: .5px solid #afaeae;       
     box-shadow:1px 1px 3px #888888;   
 }
+
+
+  /* style sideTools div */
+  /* #sideTools{
+    display:inline-block;
+    margin-top: 20px;
+    overflow-y: auto;
+    vertical-align: top;
+    padding:0;
+    font-size:12px;
+  } */
